move styleguide assets build

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,5 @@
-body {
-  font-family: sans-serif;
-}
+@charset "UTF-8";
+
+// Init ------------------------------------
+@import 'main-variables';
+@import 'bootstrap';
