--- a/assets/components/atoms/buttons/button-primary.html
+++ b/assets/components/atoms/buttons/button-primary.html
@@ -1,1 +1,7 @@
-<button class="btn btn-primary">{{#if label}}{{label}}{{^}}Primary{{/if}}</button>
+---
+notes: |
+  ##### Options :
+  - **label** - String | ex: `My button`
+  - **size** - String | ex: `btn-lg`)
+---
+<button class="btn btn-primary{{#if size}} {{size}}{{/if}}">{{#if label}}{{label}}{{^}}Primary{{/if}}</button>
