--- a/app/templates/assets/sass/bootstrap.scss
+++ b/app/templates/assets/sass/bootstrap.scss
@@ -2,7 +2,7 @@
 
 
 // Core variables and mixins
-// @import "bootstrap-variables";
+@import "bootstrap-variables";
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 
