add missing dep files

--- a/app/templates/assets/templates/views/layouts/default.html
+++ b/app/templates/assets/templates/views/layouts/default.html
@@ -14,6 +14,7 @@
     {{#if fabricator}}
       <link rel="stylesheet" href="./build/css/styleguide.css">
     {{/if}}
+    <link rel="stylesheet" href="{{#if fabricator}}./{{else}}./../{{/if}}build/css/vendors.min.css">
     <link rel="stylesheet" href="{{#if fabricator}}./{{else}}./../{{/if}}build/css/main.css">
 
     <!--[if lt IE 9]>
@@ -36,5 +37,6 @@
       <script src="{{#if fabricator}}./{{else}}./../{{/if}}build/js/styleguide.min.js"></script>
     {{/if}}
     <script src="{{#if fabricator}}./{{else}}./../{{/if}}build/js/vendors.min.js"></script>
+    <script src="{{#if fabricator}}./{{else}}./../{{/if}}build/js/main.min.js"></script>
   </body>
 </html>
