fix stream breaking on scss and js errors

--- a/app/templates/assets/templates/views/layouts/default.html
+++ b/app/templates/assets/templates/views/layouts/default.html
@@ -37,6 +37,6 @@
       <script src="{{#if fabricator}}./{{else}}./../{{/if}}build/js/styleguide.min.js"></script>
     {{/if}}
     <script src="{{#if fabricator}}./{{else}}./../{{/if}}build/js/vendors.min.js"></script>
-    <script src="{{#if fabricator}}./{{else}}./../{{/if}}build/js/main.min.js"></script>
+    <script src="{{#if fabricator}}./{{else}}./../{{/if}}build/js/main.js"></script>
   </body>
 </html>
