update component subgen

--- a/component/templates/_component.hbs
+++ b/component/templates/_component.hbs
@@ -1,6 +1,8 @@
 ---
+title: <%= slug(name).toLowerCase() %>
+collection: <%= type %>
 notes: |
-  ##### Usage : `{{> <%= slug(name).toLowerCase() %> }}`
+  ##### Usage : `<%= slug(name).toLowerCase() %>`
   ##### Options :
   - **option** - Type
 ---
