--- a/component/templates/_component.html
+++ b/component/templates/_component.html
@@ -1,5 +1,6 @@
 ---
-title: <%= slug(name).toLowerCase() %>
+title: <%= name %>
+name: <%= slug(name).toLowerCase() %>
 collection: <%= type %>
 notes: |
   ##### Usage : `<%= slug(name).toLowerCase() %>`
