--- a/component/templates/_page.html
+++ b/component/templates/_page.html
@@ -1,5 +1,6 @@
 ---
-title: <%= slug(name).toLowerCase() %>
+title: <%= name %>
+name: <%= slug(name).toLowerCase() %>
 collection: pages
 styleguide: false
 layout: page.html.swig
