--- a/app/templates/assets/sass/bootstrap.scss
+++ b/app/templates/assets/sass/bootstrap.scss
@@ -3,54 +3,54 @@
 
 // Core variables and mixins
 @import "bootstrap-variables";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 
 $icon-font-path: if($bootstrap-sass-asset-helper, "bootstrap/", "../fonts/");
 
 // Reset and dependencies
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/print";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/print";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 
 // Core CSS
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/type";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/code";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/type";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/code";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 
 // Components
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/navs";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/breadcrumbs";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/pagination";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/pager";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/labels";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/badges";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/alerts";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/progress-bars";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/media";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/list-group";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/panels";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/wells";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/close";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/navs";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/breadcrumbs";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/pagination";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/pager";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/labels";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/badges";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/alerts";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/progress-bars";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/media";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/list-group";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/panels";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/wells";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/close";
 
 // Components w/ JavaScript
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
+@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
