--- a/app/templates/assets/sass/bootstrap.scss
+++ b/app/templates/assets/sass/bootstrap.scss
@@ -1,56 +1,50 @@
-@charset "UTF-8";
-
-
 // Core variables and mixins
 @import "bootstrap-variables";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/variables";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/mixins";
 
-$icon-font-path: if($bootstrap-sass-asset-helper, "bootstrap/", "../fonts/");
-
-// Reset and dependencies
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/print";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
+// // Reset and dependencies
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/normalize";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/print";
 
 // Core CSS
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/type";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/code";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/reboot";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/type";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/images";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/code";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/grid";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/tables";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/forms";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/buttons";
 
-// Components
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/navs";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/breadcrumbs";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/pagination";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/pager";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/labels";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/badges";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/alerts";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/progress-bars";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/media";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/list-group";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/panels";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/wells";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/close";
+// // Components
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/animation";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/dropdown";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/button-group";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/input-group";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/custom-forms";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/nav";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/navbar";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/card";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/breadcrumb";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/pagination";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/pager";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/labels";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/jumbotron";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/alert";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/progress";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/media";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/list-group";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/responsive-embed";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/close";
 
 // Components w/ JavaScript
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/modal";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/tooltip";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/popover";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/carousel";
 
 // Utility classes
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
-@import "<%= fromSassToTop %>node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/utilities";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/utilities-spacing";
+@import "<%= fromSassToTop %>node_modules/bootstrap/scss/utilities-responsive";
