--- a/app/templates/assets/sass/styleguide.scss
+++ b/app/templates/assets/sass/styleguide.scss
@@ -2,9 +2,9 @@
 
 @import 'main-variables';
 @import 'styleguide-variables';
-@import '../../node_modules/toolbox-utils/styleguide/styles/mixins';
-@import '../../node_modules/toolbox-utils/styleguide/styles/code';
-@import '../../node_modules/toolbox-utils/styleguide/styles/controls';
-@import '../../node_modules/toolbox-utils/styleguide/styles/item';
-@import '../../node_modules/toolbox-utils/styleguide/styles/layout';
-@import '../../node_modules/toolbox-utils/styleguide/styles/menu';
+@import '<%= fromSassToTop %>node_modules/toolbox-utils/styleguide/styles/mixins';
+@import '<%= fromSassToTop %>node_modules/toolbox-utils/styleguide/styles/code';
+@import '<%= fromSassToTop %>node_modules/toolbox-utils/styleguide/styles/controls';
+@import '<%= fromSassToTop %>node_modules/toolbox-utils/styleguide/styles/item';
+@import '<%= fromSassToTop %>node_modules/toolbox-utils/styleguide/styles/layout';
+@import '<%= fromSassToTop %>node_modules/toolbox-utils/styleguide/styles/menu';
