first draft of Toolbox Light

--- a/generators/app/templates/assets/sass/_main.scss
+++ b/generators/app/templates/assets/sass/_main.scss
@@ -2,15 +2,12 @@
 
 // init:
 @import 'main-variables';<% if (bootstrap) { %>
-@import 'bootstrap';<% } %>
+@import 'bootstrap';<% } %><% if (styleguide) { %>
 
-<% if (fabricator) { %>
 // atoms:
 
 // molecules:
 
 // organisms:
 
-// pages:
-
-<% } %>
+// pages:<% } %>
