finish toolbox light

--- a/generators/app/templates/assets/sass/_main.scss
+++ b/generators/app/templates/assets/sass/_main.scss
@@ -2,7 +2,7 @@
 
 // init:
 @import 'main-variables';<% if (bootstrap) { %>
-@import 'bootstrap';<% } %><% if (styleguide) { %>
+@import 'bootstrap';<% } %>
 
 // atoms:
 
@@ -10,4 +10,4 @@
 
 // organisms:
 
-// pages:<% } %>
+// pages:
