--- a/generators/app/templates/assets/sass/_bootstrap.scss
+++ b/generators/app/templates/assets/sass/_bootstrap.scss
@@ -1,7 +1,14 @@
+/*!
+ * Bootstrap v4.0.0-alpha.6 (https://getbootstrap.com)
+ * Copyright 2011-2017 The Bootstrap Authors
+ * Copyright 2011-2017 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+
 // Core variables and mixins
-@import "bootstrap-variables";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/variables";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/mixins";
+@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/custom";
 
 // Reset and dependencies
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/normalize";
@@ -18,7 +25,7 @@
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/buttons";
 
 // Components
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/animation";
+@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/transitions";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/dropdown";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/button-group";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/input-group";
@@ -28,7 +35,7 @@
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/card";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/breadcrumb";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/pagination";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/tags";
+@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/badge";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/jumbotron";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/alert";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/progress";
