add missing icon sass in base styles

--- a/generators/app/templates/assets/base.scss
+++ b/generators/app/templates/assets/base.scss
@@ -2,7 +2,8 @@
 
 // init:
 @import '../config/variables';<% if (bootstrap) { %>
-@import '../config/bootstrap';<% } %>
+@import '../config/bootstrap';<% } %><% if (icons == 'font') { %>
+@import '../fonts/icon';<% } %>
 
 // atoms:
 
