--- a/generators/app/templates/config/_bootstrap.scss
+++ b/generators/app/templates/config/_bootstrap.scss
@@ -1,54 +1,43 @@
 /*!
- * Bootstrap v4.0.0-alpha.6 (https://getbootstrap.com)
- * Copyright 2011-2017 The Bootstrap Authors
- * Copyright 2011-2017 Twitter, Inc.
+ * Bootstrap v4.0.0 (https://getbootstrap.com)
+ * Copyright 2011-2018 The Bootstrap Authors
+ * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-// Core variables and mixins
+@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/functions";
+@import "./bootstrap-variables";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/variables";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/mixins";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/custom";
-
-// Reset and dependencies
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/normalize";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/print";
-
-// Core CSS
+@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/root";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/reboot";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/type";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/images";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/code";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/code";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/grid";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/tables";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/forms";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/tables";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/forms";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/buttons";
-
-// Components
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/transitions";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/dropdown";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/button-group";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/input-group";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/custom-forms";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/nav";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/navbar";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/card";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/breadcrumb";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/pagination";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/badge";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/jumbotron";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/alert";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/progress";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/media";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/list-group";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/responsive-embed";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/close";
-
-// Components w/ JavaScript
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/modal";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/tooltip";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/popover";
-@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/carousel";
-
-// Utility classes
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/dropdown";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/button-group";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/input-group";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/custom-forms";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/nav";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/navbar";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/card";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/breadcrumb";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/pagination";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/badge";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/jumbotron";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/alert";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/progress";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/media";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/list-group";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/close";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/modal";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/tooltip";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/popover";
+// @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/carousel";
 @import "<%= fromSrcToTop %>node_modules/bootstrap/scss/utilities";
+@import "<%= fromSrcToTop %>node_modules/bootstrap/scss/print";
