✨ add dynamic new component/variant and fix base.scss creation

--- a/generators/app/templates/assets/base.scss
+++ b/generators/app/templates/assets/base.scss
@@ -9,11 +9,7 @@
 // line and have exactly those names for the `$ yo toolbox:generate` command
 // to work
 
+<% atomic.forEach(function (item) { %>
 //
-// atoms:
-
-//
-// molecules:
-
-//
-// organisms:
+// <%= item %>:
+<% }) %>
